--- a/views/members.ejs
+++ b/views/members.ejs
@@ -21,6 +21,16 @@
                 </h1>
             </div>
         </div>
+        <div class="row">
+            <div class="col-12">
+                <img src="<%=imageName%>" />
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-12">
+                <a href="/logout">Logout</a>
+            </div>
+        </div>
 
 
 </body>
