--- a/views/home.ejs
+++ b/views/home.ejs
@@ -7,7 +7,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <!-- link bootstrap-->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
+        crossorigin="anonymous"></script>
     <!-- link css -->
     <link rel="stylesheet" href="styles/style.css">
 </head>
@@ -18,15 +22,29 @@
             <% } else { %>
                 <%- include('partials/navbar') -%>
                     <% } %>
-                        <% if (isResult) { %>
-                            <h1>Home Page</h1>
-                            <a href="/members">Go to Members</a>
-                            <a href="/logout">Logout</a>
-                            <% } else { %>
-                                <h1>Home Page</h1>
-                                <a href="/login">Go to Login</a>
-                                <a href="/signup">Go to Register</a>
-                                <% } %>
+                        <main>
+                            <!-- shapes -->
+                            <div class="background">
+                                <div class="shape"></div>
+                                <div class="shape"></div>
+                            </div>
+                            <form>
+                                <h1>Welcome!</h1>
+                                <div class="d-grid gap-2">
+                                    <a href="/login" class="btn" type="button">Login</a>
+                                    <a href="/signup" class="btn" type="button">Register</a>
+                                </div>
+                                <!-- <div class="container">
+                                    <div class="row">
+                                        <div class="col-12">
+                                            <h1>Home Page</h1>
+                                            <a href="/login" class="btn">Go to Login</a>
+                                            <a href="/signup" class="btn">Go to Register</a>
+                                        </div>
+                                    </div>
+                                </div> -->
+                            </form>
+                        </main>
 
 </body>
 
