--- a/views/login.ejs
+++ b/views/login.ejs
@@ -7,35 +7,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <!-- link bootstrap-->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
+        crossorigin="anonymous"></script>
     <!--  -->
     <link rel="stylesheet" href="/styles/style.css">
 </head>
 
 <body>
-    <div class="background">
-        <div class="shape"></div>
-        <div class="shape"></div>
-    </div>
-    <%- include('partials/navbar') -%>
-        <% if (error) { %>
-            <h1>
-                <%= error %>
-            </h1>
-            <% } %>
-                <div class="container">
-                    <div action="/login" method="post">
-                        <form>
-                            <input type="text" name="email" placeholder="email" />
-                            <br>
-                            <input type="password" name="password" placeholder="password" />
-                            <br>
-                            <button type="submit">Login</button>
-                        </form>
-                    </div>
+    <% if (error) { %>
+        <h1>
+            <%= error %>
+        </h1>
+        <% } %>
+            <form action="/login" method="post">
+                <input type="text" name="email" placeholder="email" />
+                <input type="password" name="password" placeholder="password" />
+                <div class="d-grid gap-2">
+                    <button class="btn" type="submit">Login</button>
                 </div>
-                <br>
-
+            </form>
 </body>
 
 </html>
