--- a/views/login.ejs
+++ b/views/login.ejs
@@ -17,6 +17,10 @@
 </head>
 
 <body>
+    <div class="background">
+        <div class="shape"></div>
+        <div class="shape"></div>
+    </div>
     <% if (error) { %>
         <h1>
             <%= error %>
