front end for signup page

--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -29,12 +29,11 @@
             <% } %>
                 <form action="/signup" method="post">
                     <input type="text" name="username" placeholder="username" />
-                    <br>
                     <input type="password" name="password" placeholder="password" />
-                    <br>
                     <input type="email" name="email" placeholder="email" />
-                    <br>
-                    <button type="submit">Sign Up</button>
+                    <div class="d-grid gap-2">
+                        <button class="btn" type="submit">Register</button>
+                    </div>
                 </form>
                 <br>
     </div>
