--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -20,6 +20,7 @@ body {
     padding: 15px 0 !important;
     font-size: 18px !important;
     font-weight: 600 !important;
+    color: #ffffff !important;
 }
 
 .btn:hover {
