--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -17,29 +17,10 @@
 </head>
 
 <body>
-    <!-- <h1>
-        <%= error %>
-    </h1>
-    <div class="d-grid gap-2">
-        <a class="btn" type="submit">Register</a>
-    </div> -->
-    <div class="container">
-        <div class="card">
-            <div class="card-header">
-                This is supposed to be the members page but..
-            </div>
-            <div class="card-body">
-                <h2 class="card-title">
-                    <%= error %>
-                </h2>
-                <p class="card-text">How on earth did you get here?</p>
-                <div class="d-grid gap-2">
-                    <a href="/" class="btn">Go Home</a>
-                </div>
-            </div>
-        </div>
-    </div>
 
+    <%- include('partials/navbar') -%>
+
+        <%- include('partials/footer') -%>
 </body>
 
 </html>
