--- a/views/members.ejs
+++ b/views/members.ejs
@@ -36,7 +36,7 @@
                     <!-- <img src="<%imageName%>" class="card-img-top" alt="cat" /> -->
                     <img src="<%=imageName%>" class="card-img-top" alt="cat" />
                     <div class="card-body">
-                        <p class="card-text">CHECK OUT MY CATS :)</p>
+                        <p class="card-text">CHECK OUT MY CATS :&rpar;</p>
                     </div>
                 </div>
             </div>
