--- a/views/pageNotFound.ejs
+++ b/views/pageNotFound.ejs
@@ -17,8 +17,12 @@
 </head>
 
 <body>
-    <h1>404 Page Not Found.</h1>
-    <a href="/">Go to Home</a>
+    <h1>
+        <%=error%>
+    </h1>
+    <div class="d-grid gap-2">
+        <a class="btn" href="/">Go to Home</a>
+    </div>
 </body>
 
 </html>
