--- a/views/home.ejs
+++ b/views/home.ejs
@@ -14,6 +14,7 @@
         crossorigin="anonymous"></script>
     <!-- link css -->
     <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="styles/loginforms.css">
 </head>
 
 <body>
