--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,3 +1,5 @@
+<link rel="stylesheet" href="/styles/navbar.css">
+
 <nav class="navbar navbar-dark fixed-top">
     <div class="container-fluid">
         <a class="navbar-brand" href="/">Eric's COMP2537 Assignment</a>
