--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -29,9 +29,9 @@
                 <div class="row">
                     <div class="col-12">
                         <h2>Users</h2>
-                        <ul>
+                        <ul class="list-group list-group-flush">
                             <% users.forEach(function(user) { %>
-                                <li>
+                                <li class="list-group-item">
                                     <p><strong>
                                             <%= user.username %>
                                         </strong> - <%= user.email %>
