--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -17,18 +17,35 @@
             <div class="offcanvas-body">
                 <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="/">Home</a>
+                        <% if (isActive==="/" ) { %>
+                            <a class="nav-link active" aria-current="page" href="/">Home</a>
+                            <% } else { %>
+                                <a class="nav-link" href="/">Home</a>
+                                <% } %>
                     </li>
                     <% if (isUser) { %>
                         <li class="nav-item">
-                            <a class="nav-link" href="/members">Members</a>
+                            <% if (isActive==="/members" ) { %>
+                                <a class="nav-link active" href="/members">Members</a>
+                                <% } else { %>
+                                    <a class="nav-link" href="/members">Members</a>
+                                    <% } %>
                         </li>
                         <% } %>
                             <% if (isAdmin) { %>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="/dashboard">Dashboard</a>
+                                    <% if (isActive==="/dashboard" ) { %>
+                                        <a class="nav-link active" href="/dashboard">Dashboard</a>
+                                        <% } else { %>
+                                            <a class="nav-link" href="/dashboard">Dashboard</a>
+                                            <% } %>
                                 </li>
                                 <% } %>
+                                    <% if (isUser) { %>
+                                        <li class="nav-item">
+                                            <a class="nav-link" href="/logout">Sign Out</a>
+                                        </li>
+                                        <% } %>
                 </ul>
             </div>
         </div>
