--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -34,25 +34,23 @@
                                 <li class="list-group-item">
                                     <p><strong>
                                             <%= user.username %>
-                                        </strong> - <%= user.email %>
+                                        </strong> - <%= user.email %> - <%= user.type %>
                                     </p>
                                     <div class="row">
                                         <div class="col">
-                                            <form action="/switchUserPrivilege" method="POST">
-                                                <input type="hidden" name="userId" value="<%= user._id %>">
-                                                <% if (user.type==="administrator" ) { %>
+                                            <% if (user.type==="administrator" ) { %>
+                                                <form action="/demoteAdmin" method="POST">
+                                                    <input type="hidden" name="userId" value="<%= user._id %>">
                                                     <button name="demote" type="submit">Demote</button>
-                                                    <% } else { %>
+                                                </form>
+                                                <% } else { %>
+                                                    <form action="/promoteAdmin" method="POST">
+                                                        <input type="hidden" name="userId" value="<%= user._id %>">
                                                         <button name="promote" type="submit">Promote</button>
-                                                        <% } %>
-                                                            <!-- <button name="promote" type="submit">Promote</button> -->
-                                            </form>
+                                                    </form>
+                                                    <% } %>
                                         </div>
                                     </div>
-                                    <!-- <form action="/switchUserPrivilege" method="POST">
-                                        <input type="hidden" name="userId" value="<%= user._id %>">
-                                        <button name="promote" type="submit">Promote</button>
-                                    </form> -->
                                 </li>
                                 <% }) %>
                         </ul>
