--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -38,17 +38,19 @@
                                     </p>
                                     <div class="row">
                                         <div class="col">
-                                            <% if (user.type==="administrator" ) { %>
-                                                <form action="/demoteAdmin" method="POST">
-                                                    <input type="hidden" name="userId" value="<%= user._id %>">
-                                                    <button name="demote" type="submit">Demote</button>
-                                                </form>
-                                                <% } else { %>
-                                                    <form action="/promoteAdmin" method="POST">
+                                            <% if (user.email !=currentUser) { %>
+                                                <% if (user.type==="administrator" ) { %>
+                                                    <form action="/demoteAdmin" method="POST">
                                                         <input type="hidden" name="userId" value="<%= user._id %>">
-                                                        <button name="promote" type="submit">Promote</button>
+                                                        <button name="demote" type="submit">Demote</button>
                                                     </form>
-                                                    <% } %>
+                                                    <% } else { %>
+                                                        <form action="/promoteAdmin" method="POST">
+                                                            <input type="hidden" name="userId" value="<%= user._id %>">
+                                                            <button name="promote" type="submit">Promote</button>
+                                                        </form>
+                                                        <% } %>
+                                                            <% } %>
                                         </div>
                                     </div>
                                 </li>
