--- a/views/login.ejs
+++ b/views/login.ejs
@@ -18,15 +18,24 @@
 </head>
 
 <body>
-    <div class="background">
-        <div class="shape"></div>
-        <div class="shape"></div>
-    </div>
-    <% if (error) { %>
+    <main>
+        <!-- <% if (error) { %>
         <h1>
             <%= error %>
         </h1>
-        <% } %>
+        <% } %> -->
+        <div class="container">
+            <% if (error) { %>
+                <h1>
+                    <%= error %>
+                </h1>
+                <% } %>
+        </div>
+        <div class="container">
+            <div class="background">
+                <div class="shape"></div>
+                <div class="shape"></div>
+            </div>
             <form action="/login" method="post">
                 <input type="text" name="email" placeholder="email" />
                 <input type="password" name="password" placeholder="password" />
@@ -34,6 +43,19 @@
                     <button class="btn" type="submit">Login</button>
                 </div>
             </form>
+        </div>
+        <!-- <div class="background">
+        <div class="shape"></div>
+        <div class="shape"></div>
+    </div>
+    <form action="/login" method="post">
+        <input type="text" name="email" placeholder="email" />
+        <input type="password" name="password" placeholder="password" />
+        <div class="d-grid gap-2">
+            <button class="btn" type="submit">Login</button>
+        </div>
+    </form> -->
+    </main>
 </body>
 
 </html>
