--- a/views/members.ejs
+++ b/views/members.ejs
@@ -27,23 +27,28 @@
                 </div>
             </div>
         </div>
-        <div class="container-fluid">
+        <div class="container">
             <div class="row">
-                <div class="card" style="width: 18rem;">
-                    <img src="<%=imageName%>" class="card-img-top" alt="cat" />
-                    <div class="card-body">
-                        <p class="card-text">CHECK OUT MY CATS :&rpar;</p>
+                <% catPics.forEach(function(cat) { %>
+                    <div class="col-4">
+                        <div class="card" style="width: 18rem;">
+                            <img src="<%=cat%>" class="card-img-top" alt="cat" />
+                            <div class="card-body">
+                                <p class="card-text">CHECK OUT MY CATS :&rpar;</p>
+                            </div>
+                        </div>
                     </div>
-                </div>
+                    <% }) %>
+
             </div>
         </div>
-        <div class="container">
+        <!-- <div class="container">
             <div class="row">
                 <div class="d-grid gap-2">
                     <a href="/logout" class="btn">Log out</a>
                 </div>
             </div>
-        </div>
+        </div> -->
 
 
 </body>
