Add personalized message in home

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -27,21 +27,13 @@
                         <a href="/login" class="btn" type="button">Login</a>
                         <a href="/signup" class="btn" type="button">Register</a>
                     </div>
-                    <!-- <div class="container">
-                                    <div class="row">
-                                        <div class="col-12">
-                                            <h1>Home Page</h1>
-                                            <a href="/login" class="btn">Go to Login</a>
-                                            <a href="/signup" class="btn">Go to Register</a>
-                                        </div>
-                                    </div>
-                                </div> -->
                 </form>
                 <% } else { %>
                     <div class="container">
                         <div class="row">
                             <div class="col-12">
                                 <h1>Home Page</h1>
+                                <h1>Welcome back, <%=username%>!</h1>
                             </div>
                         </div>
                     </div>
