--- a/views/members.ejs
+++ b/views/members.ejs
@@ -39,7 +39,11 @@
                         </div>
                     </div>
                     <% }) %>
-
+            </div>
+            <div class="row">
+                <div class="d-grid gap-2">
+                    <a href="/logout" class="btn" type="submit">Sign Out</a>
+                </div>
             </div>
         </div>
         <!-- <div class="container">
