--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -42,12 +42,14 @@
                                                 <% if (user.type==="administrator" ) { %>
                                                     <form action="/demoteAdmin" method="POST">
                                                         <input type="hidden" name="userId" value="<%= user._id %>">
-                                                        <button name="demote" type="submit">Demote</button>
+                                                        <button name="demote" type="submit"
+                                                            style="background-color: red; color: white;">Demote</button>
                                                     </form>
                                                     <% } else { %>
                                                         <form action="/promoteAdmin" method="POST">
                                                             <input type="hidden" name="userId" value="<%= user._id %>">
-                                                            <button name="promote" type="submit">Promote</button>
+                                                            <button name="promote" type="submit"
+                                                                style="background-color: green; color:white;">Promote</button>
                                                         </form>
                                                         <% } %>
                                                             <% } %>
