Separate login logout button styling

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -24,8 +24,8 @@
                 <form>
                     <h1>Welcome!</h1>
                     <div class="d-grid gap-2">
-                        <a href="/login" class="btn" type="button">Login</a>
-                        <a href="/signup" class="btn" type="button">Register</a>
+                        <a href="/login" class="btn formBtn" type="button">Login</a>
+                        <a href="/signup" class="btn formBtn" type="button">Register</a>
                     </div>
                 </form>
                 <% } else { %>
