--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -13,8 +13,8 @@ body {
     color: #ffffff !important;
 } */
 
-.btn {
-    margin-top: 50px !important;
+.formBtn {
+    margin: 25px 0px !important;
     background-color: #430d4b !important;
     cursor: pointer !important;
     padding: 15px 0 !important;
