--- a/views/login.ejs
+++ b/views/login.ejs
@@ -40,7 +40,7 @@
                 <input type="text" name="email" placeholder="email" />
                 <input type="password" name="password" placeholder="password" />
                 <div class="d-grid gap-2">
-                    <button class="btn" type="submit">Login</button>
+                    <button class="formBtn" type="submit">Login</button>
                 </div>
             </form>
         </div>
