--- a/views/members.ejs
+++ b/views/members.ejs
@@ -42,7 +42,7 @@
             </div>
             <div class="row">
                 <div class="d-grid gap-2">
-                    <a href="/logout" class="btn" type="submit">Sign Out</a>
+                    <a href="/logout" class="btn formBtn" type="submit">Sign Out</a>
                 </div>
             </div>
         </div>
