--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -42,8 +42,10 @@
                                                 <% if (user.type==="administrator" ) { %>
                                                     <form action="/demoteAdmin" method="POST">
                                                         <input type="hidden" name="userId" value="<%= user._id %>">
-                                                        <button name="demote" type="submit"
-                                                            style="background-color: red; color: white;">Demote</button>
+                                                        <button type="submit" class="btn btn-primary btn-sm">Small
+                                                            button</button>
+                                                        <!-- <button name="demote" type="submit"
+                                                            style="background-color: red; color: white;">Demote</button> -->
                                                     </form>
                                                     <% } else { %>
                                                         <form action="/promoteAdmin" method="POST">
