--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -42,16 +42,14 @@
                                                 <% if (user.type==="administrator" ) { %>
                                                     <form action="/demoteAdmin" method="POST">
                                                         <input type="hidden" name="userId" value="<%= user._id %>">
-                                                        <button type="submit" class="btn btn-primary btn-sm">Small
-                                                            button</button>
-                                                        <!-- <button name="demote" type="submit"
-                                                            style="background-color: red; color: white;">Demote</button> -->
+                                                        <button name="demote" type="submit"
+                                                            class="btn btn-danger btn-sm">Demote</button>
                                                     </form>
                                                     <% } else { %>
                                                         <form action="/promoteAdmin" method="POST">
                                                             <input type="hidden" name="userId" value="<%= user._id %>">
                                                             <button name="promote" type="submit"
-                                                                style="background-color: green; color:white;">Promote</button>
+                                                                class="btn btn-success btn-sm">Promote</button>
                                                         </form>
                                                         <% } %>
                                                             <% } %>
