--- a/views/notAnAdmin.ejs
+++ b/views/notAnAdmin.ejs
@@ -17,22 +17,23 @@
 </head>
 
 <body>
-    <div class="container">
-        <div class="card">
-            <div class="card-header">
-                This is supposed to be a secret page but..
-            </div>
-            <div class="card-body">
-                <h2 class="card-title">
-                    <%= error %>
-                </h2>
-                <p class="card-text">How on earth did you get here?</p>
-                <div class="d-grid gap-2">
-                    <a href="/" class="btn">Go Home</a>
+    <%- include('partials/navbar') -%>
+        <div class="container">
+            <div class="card">
+                <div class="card-header">
+                    This is supposed to be a secret page but..
+                </div>
+                <div class="card-body">
+                    <h2 class="card-title">
+                        <%= error %>
+                    </h2>
+                    <p class="card-text">How on earth did you get here?</p>
+                    <div class="d-grid gap-2">
+                        <a href="/" class="btn">Go Home</a>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
 
 </body>
 
