--- a/views/login.ejs
+++ b/views/login.ejs
@@ -13,7 +13,7 @@
         integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
         crossorigin="anonymous"></script>
     <!--  -->
-    <link rel="stylesheet" href="/styles/style.css">
+    <link rel="stylesheet" href="styles/style.css">
     <link rel="stylesheet" href="styles/loginforms.css">
 </head>
 
@@ -36,7 +36,7 @@
                     <input type="text" name="email" placeholder="email" />
                     <input type="password" name="password" placeholder="password" />
                     <div class="d-grid gap-2">
-                        <button class="formBtn" type="submit">Login</button>
+                        <button class="btn formBtn" type="submit">Login</button>
                     </div>
                 </form>
             </div>
