--- a/views/notAMember.ejs
+++ b/views/notAMember.ejs
@@ -29,7 +29,7 @@
                     </h2>
                     <p class="card-text">How on earth did you get here?</p>
                     <div class="d-grid gap-2">
-                        <a href="/" class="btn">Go Home</a>
+                        <a href="/" class="btn formBtn">Go Home</a>
                     </div>
                 </div>
             </div>
