--- a/views/pageNotFound.ejs
+++ b/views/pageNotFound.ejs
@@ -22,7 +22,7 @@
             <%=error%>
         </h1>
         <div class="d-grid gap-2">
-            <a class="btn" href="/">Go to Home</a>
+            <a class="btn formBtn" href="/">Go to Home</a>
         </div>
 </body>
 
