--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -34,7 +34,7 @@
                         <input type="password" name="password" placeholder="password" />
                         <input type="email" name="email" placeholder="email" />
                         <div class="d-grid gap-2">
-                            <button class="btn" type="submit">Register</button>
+                            <button class="btn formBtn" type="submit">Register</button>
                         </div>
                     </form>
                     <br>
