--- a/views/members.ejs
+++ b/views/members.ejs
@@ -18,7 +18,7 @@
 
 <body>
     <%- include('partials/navbar') -%>
-        <div class="container">
+        <div class="container my-4">
             <div class="row">
                 <div class="col-12">
                     <h1>Members</h1>
@@ -27,34 +27,40 @@
                 </div>
             </div>
         </div>
-        <div class="container">
-            <div class="row">
+        <div class="container-fluid d-none d-md-block text-center">
+            <div class="row justify-content-center">
                 <% catPics.forEach(function(cat) { %>
-                    <div class="col-4">
+                    <div class="col-2 p-2">
                         <div class="card" style="width: 18rem;">
                             <img src="<%=cat%>" class="card-img-top" alt="cat" />
                             <div class="card-body">
-                                <p class="card-text">CHECK OUT MY CATS :&rpar;</p>
+                                <p class="card-text">Miso and Nori :&rpar;</p>
                             </div>
                         </div>
                     </div>
                     <% }) %>
             </div>
-            <div class="row">
-                <div class="d-grid gap-2">
-                    <a href="/logout" class="btn formBtn" type="submit">Sign Out</a>
+        </div>
+        <div class="container d-md-none text-center">
+            <% catPics.forEach(function(cat) { %>
+                <div class="row justify-content-center">
+                    <div class="card" style="width: 18rem;">
+                        <img src="<%=cat%>" class="card-img-top" alt="cat" />
+                        <div class="card-body">
+                            <p class="card-text">CHECK OUT MY CATS :&rpar;</p>
+                        </div>
+                    </div>
                 </div>
+                <% }) %>
+        </div>
+        <div class="row">
+            <div class="d-grid gap-2">
+                <a href="/logout" class="btn formBtn" type="submit">Sign Out</a>
             </div>
         </div>
-        <!-- <div class="container">
-            <div class="row">
-                <div class="d-grid gap-2">
-                    <a href="/logout" class="btn">Log out</a>
-                </div>
-            </div>
-        </div> -->
 
 
 </body>
+
 
 </html>
