--- a/views/login.ejs
+++ b/views/login.ejs
@@ -41,6 +41,9 @@
                 </form>
             </div>
     </main>
+    <div class="container-fluid fixed-bottom p-0">
+        <%- include('partials/footer') -%>
+    </div>
 </body>
 
 </html>
