--- a/views/members.ejs
+++ b/views/members.ejs
@@ -72,6 +72,7 @@
                 <a href="/logout" class="btn formBtn" type="submit">Sign Out</a>
             </div>
         </div>
+        <%- include('partials/footer') -%>
 
 
 </body>
