--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -39,6 +39,10 @@
                     </form>
                     <br>
         </div>
+        <div class="container-fluid fixed-bottom p-0">
+            <%- include('partials/footer') -%>
+        </div>
+
 </body>
 
 </html>
