--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -61,6 +61,9 @@
                     </div>
                 </div>
                 <% } %>
+            </div>
+            <%- include('partials/footer') -%>
+
 </body>
 
 </html>
