--- a/views/pageNotFound.ejs
+++ b/views/pageNotFound.ejs
@@ -24,6 +24,8 @@
         <div class="d-grid gap-2">
             <a class="btn formBtn" href="/">Go to Home</a>
         </div>
+        <%- include('partials/footer') -%>
+
 </body>
 
 </html>
