--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,24 +1,13 @@
-<!DOCTYPE html>
-<html lang="en">
+<link rel="stylesheet" href="styles/footer.css">
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <!-- link bootstrap-->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
-        crossorigin="anonymous"></script>
-    <!-- link css -->
-    <link rel="stylesheet" href="styles/style.css">
-</head>
-
-<body>
-
-
-</body>
-
-</html>
+<div class="push"></div>
+<footer class="p-4 text-center">
+    <p class="lead text-center">© 2023 All Rights Reserved</p>
+    <div class="container">
+        <a href="#"><i class="bi bi-facebook h1 text-light p-2"></i></a>
+        <a href="#"><i class="bi bi-instagram h1 text-light p-2"></i></a>
+        <a href="#"><i class="bi bi-twitter h1 text-light p-2"></i></a>
+        <a href="#"><i class="bi bi-twitch h1 text-light p-2"></i></a>
+    </div>
+</footer>
