--- a/views/notAMember.ejs
+++ b/views/notAMember.ejs
@@ -18,7 +18,7 @@
 
 <body>
     <%- include('partials/navbar') -%>
-        <div class="container">
+        <div class="container p-4">
             <div class="card">
                 <div class="card-header">
                     This is supposed to be the members page but..
@@ -34,8 +34,9 @@
                 </div>
             </div>
         </div>
-        <%- include('partials/footer') -%>
-
+        <div class="container-fluid fixed-bottom p-0">
+            <%- include('partials/footer') -%>
+        </div>
 </body>
 
 </html>
