--- a/views/notAnAdmin.ejs
+++ b/views/notAnAdmin.ejs
@@ -18,7 +18,7 @@
 
 <body>
     <%- include('partials/navbar') -%>
-        <div class="container">
+        <div class="container p-4">
             <div class="card">
                 <div class="card-header">
                     This is supposed to be a secret page but..
@@ -29,13 +29,14 @@
                     </h2>
                     <p class="card-text">How on earth did you get here?</p>
                     <div class="d-grid gap-2">
-                        <a href="/" class="btn">Go Home</a>
+                        <a href="/" class="btn formBtn">Go Home</a>
                     </div>
                 </div>
             </div>
         </div>
-        <%- include('partials/footer') -%>
-
+        <div class="container-fluid fixed-bottom p-0">
+            <%- include('partials/footer') -%>
+        </div>
 </body>
 
 </html>
