Implement admin authentication middleware

--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -8,6 +8,6 @@
         <a href="#"><i class="bi bi-facebook h1 text-light p-2"></i></a>
         <a href="#"><i class="bi bi-instagram h1 text-light p-2"></i></a>
         <a href="#"><i class="bi bi-twitter h1 text-light p-2"></i></a>
-        <a href="#"><i class="bi bi-twitch h1 text-light p-2"></i></a>
+        <a href="https://www.twitch.tv/rakshasa_sw"><i class="bi bi-twitch h1 text-light p-2"></i></a>
     </div>
 </footer>
