Separate user template into users.ejs

--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -27,3 +27,9 @@ h1 {
     text-align: center !important;
     margin-top: 50px !important;
 }
+
+h2 {
+    color: #ffffff !important;
+    font-size: 30px !important;
+    margin-top: 50px !important;
+}
