Redirect users to login page in notAMember.ejs

--- a/views/notAnAdmin.ejs
+++ b/views/notAnAdmin.ejs
@@ -27,9 +27,9 @@
                     <h2 class="card-title">
                         <%= error %>
                     </h2>
-                    <p class="card-text">Let's get you logged in.</p>
+                    <p class="card-text">How on earth did you get here?</p>
                     <div class="d-grid gap-2">
-                        <a href="/login" class="btn formBtn">Login</a>
+                        <a href="/" class="btn formBtn">Go Home</a>
                     </div>
                 </div>
             </div>
