Add content to home.ejs in / route

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -33,9 +33,14 @@
             <% } else { %>
                 <div class="container">
                     <div class="row">
-                        <div class="col-12">
+                        <div class="col">
                             <h1>Home Page</h1>
                             <h1>Welcome back, <%=username%>!</h1>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col">
+                            <img src="images/waggingtail.gif" class="rounded mx-auto d-block" alt="waggingtailgif">
                         </div>
                     </div>
                 </div>
